--- a/Resources/Private/Partials/Backend/Order/Show/Cart.html
+++ b/Resources/Private/Partials/Backend/Order/Show/Cart.html
@@ -1,7 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
-<table class="typo3-dblist table table-striped table-hover">
+<table class="table-order table table-striped table-hover">
     <thead>
     <f:render partial="Backend/Order/Show/CartTable/Header" arguments="{orderItem: orderItem}"/>
     </thead>
