--- a/Resources/Private/Partials/Backend/Order/Show/CartTable/Header.html
+++ b/Resources/Private/Partials/Backend/Order/Show/CartTable/Header.html
@@ -1,39 +1,31 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
-<tr class="t3-row-header">
-    <th width="100px">
-        <f:translate
-                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.sku"/>
+<tr>
+    <th>
+        <f:translate key="tx_cart_domain_model_order_product.sku"/>
     </th>
-    <th width="300px">
-        <f:translate
-                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.title"/>
+    <th>
+        <f:translate key="tx_cart_domain_model_order_product.title"/>
     </th>
-    <th width="100px">
-        <f:translate
-                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.price"/>
+    <th class="cart-figure">
+        <f:translate key="tx_cart_domain_model_order_product.price"/>
     </th>
-    <th width="100px">
-        <f:translate
-                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.discount"/>
+    <th class="cart-figure">
+        <f:translate key="tx_cart_domain_model_order_product.discount"/>
     </th>
-    <th width="100px">
-        <f:translate
-                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.count"/>
+    <th class="cart-figure">
+        <f:translate key="tx_cart_domain_model_order_product.count"/>
     </th>
-    <th width="100px">
-        <f:translate
-                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.net"/>
+    <th class="cart-figure">
+        <f:translate key="tx_cart_domain_model_order_product.net"/>
     </th>
-    <th width="100px">
-        <f:translate
-                key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.gross"/>
+    <th class="cart-figure">
+        <f:translate key="tx_cart_domain_model_order_product.gross"/>
     </th>
     <f:for each="{orderItem.orderTotalTax}" as="orderTotalTax">
-        <td width="100px">
-            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:plugin.cart.product.tax"
-                         arguments="{0: orderTotalTax.orderTaxClass.name}"/>
+        <td>
+            <f:translate key="plugin.cart.product.tax" arguments="{0: orderTotalTax.orderTaxClass.name}"/>
         </td>
     </f:for>
 </tr>
