--- a/Resources/Private/Partials/Utility/Paginator.html
+++ b/Resources/Private/Partials/Utility/Paginator.html
@@ -1,40 +1,75 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
+<nav class="pagination-wrap">
+    <ul class="pagination">
+        <f:if condition="{pagination.previousPageNumber} && {pagination.previousPageNumber} >= {pagination.firstPageNumber}">
+            <f:then>
+                <li class="page-item">
+                    <a href="{f:uri.action(action:actionName, arguments:{currentPage: 1})}" title="{f:translate(key:'pagination.first')}" class="page-link">
+                        <core:icon identifier="actions-view-paging-first" />
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a href="{f:uri.action(action:actionName, arguments:{currentPage: pagination.previousPageNumber})}" title="{f:translate(key:'pagination.previous')}" class="page-link">
+                        <core:icon identifier="actions-view-paging-previous" />
+                    </a>
+                </li>
+            </f:then>
+            <f:else>
+                <li class="page-item disabled">
+                    <span class="page-link">
+                        <core:icon identifier="actions-view-paging-first" />
+                    </span>
+                </li>
+                <li class="page-item disabled">
+                    <span class="page-link">
+                        <core:icon identifier="actions-view-paging-previous" />
+                    </span>
+                </li>
+            </f:else>
+        </f:if>
 
-<ul class="pagination pagination-block">
-    <f:if condition="{pagination.previousPageNumber} && {pagination.previousPageNumber} >= {pagination.firstPageNumber}">
-        <f:then>
-            <li class="waves-effect">
-                <a href="{f:uri.action(action:actionName, arguments:{currentPage: 1})}" title="{f:translate(key:'pagination.first')}"  class="btn btn-link">&laquo;</a>
-            </li>
-            <li class="waves-effect">
-                <a href="{f:uri.action(action:actionName, arguments:{currentPage: pagination.previousPageNumber})}" title="{f:translate(key:'pagination.previous')}"  class="btn btn-link">&lsaquo;</a>
-            </li>
-        </f:then>
-        <f:else>
-            <li class="disabled"><a href="#" class="btn btn-link">&laquo;</a></li>
-            <li class="disabled"><a href="#" class="btn btn-link">&lsaquo;</a></li>
-        </f:else>
-    </f:if>
-    <f:for each="{pages}" as="page">
-        <li class="{f:if(condition: '{page} == {paginator.currentPageNumber}', then:'active', else:'waves-effect')}">
-            <a href="{f:uri.action(action:actionName, arguments:{currentPage: page})}" class="btn btn-link">{page}</a>
+        <li class="page-item">
+        <span class="page-link">
+            <f:translate key="LLL:EXT:sf_event_mgt/Resources/Private/Language/locallang_be.xlf:administration.pagination.records" /> {pagination.startRecordNumber} - {pagination.endRecordNumber}
+        </span>
         </li>
-    </f:for>
 
-    <f:if condition="{pagination.nextPageNumber} && {pagination.nextPageNumber} <= {pagination.lastPageNumber}">
-        <f:then>
-            <li class="waves-effect">
-                <a href="{f:uri.action(action:actionName, arguments:{currentPage: pagination.nextPageNumber})}" title="{f:translate(key:'pagination.next')}"  class="btn btn-link">&rsaquo;</a>
+        <f:for each="{pagination.allPageNumbers}" as="page">
+            <li class="page-item {f:if(condition: '{page} == {paginator.currentPageNumber}', then:'active')}">
+                <a href="{f:uri.action(action:actionName, arguments:{currentPage: page})}" class="page-link">{page}</a>
             </li>
-            <li class="waves-effect">
-                <a href="{f:uri.action(action:actionName, arguments:{currentPage: pagination.lastPageNumber})}" title="{f:translate(key:'pagination.last')}" class="btn btn-link">&raquo;</a>
-            </li>
-        </f:then>
-        <f:else>
-            <li class="disabled"><a href="#" class="btn btn-link">&rsaquo;</a></li>
-            <li class="disabled"><a href="#" class="btn btn-link">&raquo;</a></li>
-        </f:else>
-    </f:if>
-</ul>
+        </f:for>
+        <f:if condition="{pagination.hasMorePages}">
+            <li>…</li>
+        </f:if>
+
+        <f:if condition="{pagination.nextPageNumber} && {pagination.nextPageNumber} <= {pagination.lastPageNumber}">
+            <f:then>
+                <li class="page-item">
+                    <a href="{f:uri.action(action:actionName, arguments:{currentPage: pagination.nextPageNumber})}" title="{f:translate(key:'pagination.next')}" class="page-link">
+                        <core:icon identifier="actions-view-paging-next" />
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a href="{f:uri.action(action:actionName, arguments:{currentPage: pagination.lastPageNumber})}" title="{f:translate(key:'pagination.last')}" class="page-link">
+                        <core:icon identifier="actions-view-paging-last" />
+                    </a>
+                </li>
+            </f:then>
+            <f:else>
+                <li class="page-item disabled">
+                    <span class="page-link">
+                        <core:icon identifier="actions-view-paging-next" />
+                    </span>
+                </li>
+                <li class="page-item disabled">
+                    <span class="page-link">
+                        <core:icon identifier="actions-view-paging-last" />
+                    </span>
+                </li>
+            </f:else>
+        </f:if>
+    </ul>
+</nav>
 </html>
