--- a/Resources/Private/Templates/Backend/Order/Order/List.html
+++ b/Resources/Private/Templates/Backend/Order/Order/List.html
@@ -19,31 +19,31 @@
                     <thead>
                     <tr>
                         <th>
-                            <f:translate key="tx_cart_domain_model_order_address.first_name"/>
+                            <f:translate key="tx_cart.backend.order.address.first_name"/>
                         </th>
                         <th>
-                            <f:translate key="tx_cart_domain_model_order_address.last_name"/>
+                            <f:translate key="tx_cart.backend.order.address.last_name"/>
                         </th>
                         <th>
-                            <f:translate key="tx_cart_domain_model_order_address.company"/>
+                            <f:translate key="tx_cart.backend.order.address.company"/>
                         </th>
                         <th>
-                            <f:translate key="tx_cart_domain_model_order_item.order_number"/>
+                            <f:translate key="tx_cart.backend.order.order_number"/>
                         </th>
                         <th>
-                            <f:translate key="tx_cart_domain_model_order_item.order_date"/>
+                            <f:translate key="tx_cart.backend.order.order_date"/>
                         </th>
                         <th>
-                            <f:translate key="tx_cart_domain_model_order_item.invoice_number"/>
+                            <f:translate key="tx_cart.backend.order.invoice_number"/>
                         </th>
                         <th>
-                            <f:translate key="tx_cart_domain_model_order_item.invoice_date"/>
+                            <f:translate key="tx_cart.backend.order.invoice_date"/>
                         </th>
                         <th>
-                            <f:translate key="tx_cart_domain_model_order_item.total_gross"/>
+                            <f:translate key="tx_cart.backend.order.total_gross"/>
                         </th>
                         <th>
-                            <f:translate key="tx_cart_domain_model_order_item.total_net"/>
+                            <f:translate key="tx_cart.backend.order.total_net"/>
                         </th>
                         <th>
                             <f:translate key="tx_cart_domain_model_order_payment"/>
