--- a/Resources/Private/Templates/Backend/Order/Order/List.html
+++ b/Resources/Private/Templates/Backend/Order/Order/List.html
@@ -7,78 +7,99 @@
 
 <f:section name="Content">
     <div class="cart-list">
-    <f:render partial="Backend/Order/Filter/List"
-              arguments="{searchArguments: searchArguments, action: 'list', paymentStatus: paymentStatus, shippingStatus: shippingStatus}"/>
+        <f:if condition="!{orderItems} && !{searchArguments}">
+            <f:then>
+                <f:comment>
+                    Do not show the filter if the page has no `orderItems` and no ``searchArguments`.
+                    The searchArguments are needed as condition as otherwise the filters will not be shown when the
+                    search results in zero order items.
+                </f:comment>
+            </f:then>
+            <f:else>
+                <f:render partial="Backend/Order/Filter/List"
+                          arguments="{searchArguments: searchArguments, action: 'list', paymentStatus: paymentStatus, shippingStatus: shippingStatus}"/>
+            </f:else>
+        </f:if>
 
-    <div class="clear"></div>
 
-    <f:if condition="{orderItems}">
-        <f:then>
-            <div class="table-fit">
-                <table class="table table-striped table-hover">
-                    <thead>
-                    <tr>
-                        <th>
-                            <f:translate key="tx_cart.backend.order.address.first_name"/>
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart.backend.order.address.last_name"/>
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart.backend.order.address.company"/>
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart.backend.order.order_number"/>
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart.backend.order.order_date"/>
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart.backend.order.invoice_number"/>
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart.backend.order.invoice_date"/>
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart.backend.order.total_gross"/>
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart.backend.order.total_net"/>
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart_domain_model_order_payment"/>
-                            <br/>(
-                            <f:translate key="tx_cart_domain_model_order_payment.status"/>
-                            )
-                        </th>
-                        <th>
-                            <f:translate key="tx_cart_domain_model_order_shipping"/>
-                            <br/>(
-                            <f:translate key="tx_cart_domain_model_order_shipping.status"/>
-                            )
-                        </th>
-                        <th>
-                            &nbsp;
-                        </th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <f:for each="{paginator.paginatedItems}" as="orderItem">
-                        <f:cycle values="{0: 'even', 1: 'odd'}" as="cycle">
-                            <f:render partial="Backend/Order/List/Item"
-                                      arguments="{orderItem: orderItem, cycle:cycle, arguments: arguments, pdfRendererInstalled: pdfRendererInstalled}"/>
-                        </f:cycle>
-                    </f:for>
-                    </tbody>
-                </table>
-            </div>
-            <f:render partial="Utility/Paginator"
-                      arguments="{pagination: pagination, pages: pages, paginator: paginator}"/>
-        </f:then>
-        <f:else>
-            Select a Page where Order Item Dataset are saved.
-        </f:else>
-    </f:if>
+        <div class="clear"></div>
+
+        <f:if condition="{orderItems}">
+            <f:then>
+                <div class="table-fit">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <th>
+                                <f:translate key="tx_cart.backend.order.address.first_name"/>
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart.backend.order.address.last_name"/>
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart.backend.order.address.company"/>
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart.backend.order.order_number"/>
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart.backend.order.order_date"/>
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart.backend.order.invoice_number"/>
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart.backend.order.invoice_date"/>
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart.backend.order.total_gross"/>
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart.backend.order.total_net"/>
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart_domain_model_order_payment"/>
+                                <br/>(
+                                <f:translate key="tx_cart_domain_model_order_payment.status"/>
+                                )
+                            </th>
+                            <th>
+                                <f:translate key="tx_cart_domain_model_order_shipping"/>
+                                <br/>(
+                                <f:translate key="tx_cart_domain_model_order_shipping.status"/>
+                                )
+                            </th>
+                            <th>
+                                &nbsp;
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <f:for each="{paginator.paginatedItems}" as="orderItem">
+                            <f:cycle values="{0: 'even', 1: 'odd'}" as="cycle">
+                                <f:render partial="Backend/Order/List/Item"
+                                          arguments="{orderItem: orderItem, cycle:cycle, arguments: arguments, pdfRendererInstalled: pdfRendererInstalled}"/>
+                            </f:cycle>
+                        </f:for>
+                        </tbody>
+                    </table>
+                </div>
+                <f:render partial="Utility/Paginator"
+                          arguments="{pagination: pagination, pages: pages, paginator: paginator}"/>
+            </f:then>
+            <f:else>
+                <f:if condition="{searchArguments}">
+                    <f:then>
+                        <f:translate key="tx_cart.backend.filter.no_results"/>
+                    </f:then>
+                    <f:else>
+                        <h2><f:translate key="tx_cart.backend.page_without_datasets.title"/></h2>
+                        <h4><f:translate key="tx_cart.backend.page_without_datasets.instruction"/></h4>
+                    </f:else>
+                </f:if>
+
+            </f:else>
+        </f:if>
     </div>
 </f:section>
 </html>
